<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">舒订</string>
    <string name="tab_order">订单</string>
    <string name="tab_client">客户</string>
    <string name="tab_setting">设置</string>
    <string name="test_num">999</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">正在加载</string>
    <string name="title_alert">提示信息</string>
    <string name="download_title">正在下载%s</string>
    <string name="down_state">正在下载：%s</string>
    <string name="file_download_over">文件已下载完毕</string>
    <string name="download_over">下载完成</string>
    <string name="ready_download">准备下载</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="no_immediate_update">发现有新版本是否立即更新</string>
    <string name="check_for_updates">检查更新</string>
    <string name="now_updates">马上升级</string>
    <string name="later_on">稍后再说</string>
    <string name="hint_remain_count">您还可以输入%s字</string>
    <string name="hint_max_length_msg">最多只能输入%s字</string>
    <string name="tip_double_click_exit">再次点击退出舒订</string>
    <string name="jump">跳过</string>
    <string name="start">开始</string>
    <string name="yesterday_order">昨日订单数</string>
    <string name="today_order">今天订单数</string>
    <string name="order_manage">订单管理</string>
    <string name="input_telephone_init">手机</string>
    <string name="password_init">密码</string>
    <string name="login">登录</string>
    <string name="fast_register">注册新账号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="please_input_phone_null">请输入手机号码!</string>
    <string name="please_input_phone_again">手机号码格式错误，请从新输入!</string>
    <string name="please_input_password_null">请输入密码!</string>
    <string name="account_login">账号登录</string>
    <string name="register">注册</string>
    <string name="input_code_init">验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="input_new_password">新密码</string>
    <string name="reset_password">重置密码</string>
    <string name="please_input_code_null">请输入验证码!</string>
    <string name="request_service_failure">请求服务失败</string>
    <string name="get_code_s">秒后重新获取</string>
    <string name="disclaimer">免责声明</string>
    <string name="input_order_search_init">住店人名/手机号/订单号</string>
    <string name="input_client_search_init">住店人名/手机号/昵称</string>
    <string name="input_integral_search_init">粉丝人名/手机号/昵称</string>
    <string name="input_init">请输入</string>
    <string name="hotel">酒店</string>
    <string name="order_state">订单状态</string>
    <string name="pay_state">支付状态</string>
    <string name="pay_mode">支付方式</string>
    <string name="order_details">订单详情</string>
    <string name="client_manage">客户管理</string>
    <string name="integral_details">积分明细</string>
    <string name="integral_rule">积分规则</string>
    <string name="setting_manager">管理员设置</string>
    <string name="online_help">在线帮助</string>
    <string name="update_app">更新版本</string>
    <string name="online_feedback">在线反馈</string>
    <string name="about_me">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="add_manager">添加管理员</string>
    <string name="logout_ok">退出登录成功</string>
    <string name="please_select_the_time">请选择时间</string>
    <string name="select">选择</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="setting_insider">设置会员</string>
    <string name="client_details">客户详情</string>
    <string name="select_the_manager_type">请选择管理员分组</string>
    <string name="user_name">用户名称:</string>
    <string name="user_password">用户密码:</string>
    <string name="manager_type">管理员分组:</string>
    <string name="real_name">真实姓名:</string>
    <string name="account_enable">启用</string>
    <string name="delete">删除</string>
    <string name="e_mail">电子邮箱:</string>
    <string name="remarks">备注:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="insider_name">会员姓名:</string>
    <string name="insider_phone">手机号码:</string>
    <string name="insider_type">会员类型:</string>
    <string name="select_the_insider_type">请选择会员类型</string>
    <string name="yuan">元</string>
    <string name="consume_every_time">每次消费（元）</string>
    <string name="integral_every_time">获得积分（分）</string>
    <string name="order_id">订单编号:</string>
    <string name="hotel_name">酒店名称:</string>
    <string name="hotel_type">房型:</string>
    <string name="order_status_add">订单状态:</string>
    <string name="pay_mode_add">支付方式:</string>
    <string name="pay_status_add">支付状态:</string>
    <string name="into_time">进店时间:</string>
    <string name="out_time">离店时间:</string>
    <string name="client_num">宾客:</string>
    <string name="room_num">房间:</string>
    <string name="total_sum">总房价:</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="client_type">客户身份:</string>
    <string name="concern_time">关注时间:</string>
    <string name="client_nickname">客户昵称:</string>
    <string name="check_in_num">入住次数:</string>
    <string name="integral_num">积分数量:</string>
    <string name="edit">编辑</string>
    <string name="manager_name">管理员姓名:</string>
    <string name="to">至</string>
    <string name="no_more">没有更多</string>
    <string name="no_net">网络根本没连，赶紧检查</string>
    <string name="delete_works">是否删除作品！</string>
    <string name="start_content01">客户订单轻松管理</string>
    <string name="start_content02">实时数据随时查看</string>
    <string name="now_play">立即体验</string>
    <string name="reset_password_setting">修改密码</string>
    <string name="room_unit">房数（间）</string>
    <string name="choice_manager">选择管理员</string>

</resources>