<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_bg"
    tools:context=".MainActivity" >

    <include
        android:id="@+id/in_title"
        layout="@layout/view_title" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_title"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#2b6ec4"
                android:gravity="left|bottom"
                android:paddingLeft="10dp"
                android:text="@string/room_unit"
                android:textColor="@color/white" />

            <com.wxbooking.shuding.widget.HistogramView
                android:id="@+id/histogram_view"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:background="#2b6ec4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/white"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_num"
                        android:textColor="#ff8208"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/yesterday_order"
                        android:textColor="@color/home_order_color"
                        android:textSize="20dp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:background="@color/title_bg" >
                </View>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_num"
                        android:textColor="#ff8208"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/today_order"
                        android:textColor="@color/home_order_color"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/login_bg" >
            </View>

            <LinearLayout
                android:id="@+id/go_order_list"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/main_margin"
                android:paddingRight="@dimen/main_margin" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center" >

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp" 
                        android:src="@drawable/order_pic"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/order_manage"
                    android:textColor="@color/home_text_color"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="left|center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/more_me" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>