<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:gravity="center|left" >

        <TextView
            android:id="@+id/manager_name_marked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/manager_name"
            android:textColor="@color/text_color_gray_c" />

        <TextView
            android:id="@+id/manager_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/manager_name_marked"
            android:gravity="center"
            android:text="@string/about_me"
            android:textColor="@color/text_color_gray_c" />

        <TextView
            android:id="@+id/account_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/about_me"
            android:textColor="@color/text_color_gray_c" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:gravity="center|left" >

        <TextView
            android:id="@+id/phone_marked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/insider_phone"
            android:textColor="@color/text_color_gray_c" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/phone_marked"
            android:gravity="center"
            android:text="@string/about_me"
            android:textColor="@color/text_color_gray_c" />

        <TextView
            android:id="@+id/manager_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/about_me"
            android:textColor="@color/text_color_gray_c" />
    </RelativeLayout>

    <include layout="@layout/view_s_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:gravity="center|left" >

        <TextView
            android:id="@+id/num_mark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:textColor="@color/text_color_gray_c" />

        <TextView
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/delete_btn"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/edit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/delete"
            android:textColor="@color/white" />
    </RelativeLayout>

    <include layout="@layout/view_line" />

</LinearLayout>