<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@color/title_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:padding="15dp"
            android:src="@drawable/title_back" />

        <RelativeLayout
            android:id="@+id/search_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/search_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:padding="7dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/search_icon" />

                <TextView
                    android:id="@+id/search_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:gravity="left|center_vertical"
                    android:hint="@string/input_order_search_init"
                    android:singleLine="true"
                    android:textColor="@color/main_text_dark"
                    android:textColorHint="@color/main_text_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/cancel"
            android:textColor="@color/main_color"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/title_line" />

</LinearLayout>